state info no longer overlaps UI controls

--- a/src/web/viz.css
+++ b/src/web/viz.css
@@ -47,7 +47,7 @@ circle {
 
 p#state-info {
     position: fixed;
-    left: 10%;
+    left: 230px;
     top: 2%;
 }
 
